# logwatch_client

./: .gitignore  CHANGELOG.md  README.md  logwatch_client.py  pyproject.toml  test_logwatch_client.py
.github/workflows/: publish.yml
docs/: ai-assistant-playbook.md
skills/logwatch-monitor/: SKILL.md
skills/logwatch-monitor/agents/: openai.yaml
skills/logwatch-monitor/references/: api-reference.md
skills/logwatch-monitor/scripts/: logwatch_api_monitor.py
